target/classes/META-INF/fabric8/openshift/camel-ose-springboot-xml-svc.yml
---
apiVersion: "v1"
kind: "Service"
metadata:
  annotations:
    fabric8.io/iconUrl: "img/icons/camel.svg"
  labels:
    expose: "true"
    provider: "fabric8"
    project: "camel-ose-springboot-xml"
    version: "1.0.0-SNAPSHOT"
    group: "org.mycompany"
  name: "camel-ose-springboot-xml"
spec:
  ports:
  - name: "http"
    port: 80
    protocol: "TCP"
    targetPort: 8383
  selector:
    project: "camel-ose-springboot-xml"
    provider: "fabric8"
    group: "org.mycompany"
  type: "ClusterIP"
