target/classes/META-INF/fabric8/openshift/camel-ose-springboot-xml-route.yml
---
apiVersion: "v1"
kind: "Route"
metadata:
  labels:
    provider: "fabric8"
    project: "camel-ose-springboot-xml"
    version: "1.0.0-SNAPSHOT"
    group: "org.mycompany"
  name: "camel-ose-springboot-xml"
spec:
  port:
    targetPort: 8383
  to:
    kind: "Service"
    name: "camel-ose-springboot-xml"
